# ChangeLog for net-mail/notmuch
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*notmuch-9999 (24 Nov 2011)

  24 Nov 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
  +files/50notmuch-gentoo.el, +notmuch-9999.ebuild, +metadata.xml:
  Based on net-mail/notmuch-0.9-r2 from Portage Tree.
