@@ -2,17 +2,17 @@
 Hash: SHA1
 
 AUX 50notmuch-gentoo.el 291 RMD160 7e036b8700f50cde6c3b27622193ddf08812229b SHA1 cc087fe76f750e84171a6ddef9dc10139b8450cc SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b
-EBUILD notmuch-9999.ebuild 3050 RMD160 b1002931773b942f612293aa6a2177358151b47d SHA1 8aef09d9535b437c695e39759a7616f61dec3e92 SHA256 e9ed0c227c534f5004ffb9d6b33f62fd41e435fa3ec65baa24d10c32a27d4ff5
-MISC ChangeLog 325 RMD160 0053ff5ce160014957959fd6d9ee31d852a3c5bb SHA1 dfb2544afa3dcae34e1af2497f8f22dcda7dae0e SHA256 222ffc75c73ae9436922fede3e1b74a2ade92d7bd873722b24d767d5bc450815
+EBUILD notmuch-9999.ebuild 3308 RMD160 d10e43c0f945db043efffaf053e623bd89b34145 SHA1 bc5f5784764cc9c278d18e02e2d0dafcfa5bf65e SHA256 85f2154471c9051ef09f74b0c9323c7ad5de09e9cc5e22e3898125f17395abf7
+MISC ChangeLog 464 RMD160 e26b6a62713c71639e6081af3f581ccddfd912f6 SHA1 d0c9a5c2f596ba54150d146ebdf8ffe6b7cb8962 SHA256 193f1e19cf59a0180358b17b366d4b4d8a2ba4d7e6d5b77448536e74f1d35bd7
 MISC metadata.xml 870 RMD160 1ea6d669111c3e30f719c2337bb1fbebe7ab14aa SHA1 49ddae312621716998b7fe205f93536b2c2d20b4 SHA256 37955cc892c0585089e4dfb7ea2a8d1cb819164c4d098ba1be7253929be9890f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJOzgfUAAoJEPATRTHh2/q1bvEH/1C6eLyhnsHI2UrIB7wf03Sc
-bwh9JpoK5BA8mj8N8Nu6roXyncPiypogzoFegGCqDkwdHD1yreQdnHqRHwPhfR0t
-ZYSLiHVIWhoS9BWswOf4ViA6SY/fDqrnMjXGLlQfZxY07Cb4AahpfkHc/1FYj+qz
-thyEwuYggv5vpuH0N95B6122thd9v1NSSp/BcUwSvVvMBT7SQzcThqqXNbgDxui3
-QZBgDHRohTKlmWYKqZLkc+yTm1D4F6P4jfu8ebQa4Wxcxps4yvyNINUGV9KZ2NBF
-cDlN/FirRmDK+ew5UzeFgCdKbnihyeyeW/D+ARnvMOT3Q9kKwYYrSg5PYC/bGSA=
-=BtHE
+iQEcBAEBAgAGBQJOzowdAAoJEPATRTHh2/q1YHoIAKVrLSxQZ8dJIHHMqAnf8pAh
+HBq7WSoSYcHCu6wR404MLkn/3H27qjjT9WfYEXJFJw+56dB0jNHQ8N+pyDYjTonG
+0WU2RN3eKERYsGhIssuLVEI45QJlIpInUwocR3wXI5+Ah/VBPZ6Zze7dYgs79XGT
+i27QJ9LCoum952fdmJg/XuBGSpdqhfeumc21LC0FWqMOfNcqXR7LWhsb3Y/SOiIl
+VIwE7e4DszEwvsGvxPe9HhNacC6uBht6rAXzmJYAOH/gqDh5xQ89ERkmZDeUXAZ5
+fhexWxbu4TeZf37gwRJTd6Sbj7864oNc6TdzQ+8W6JXXvGFtVkN9yo7sb5WSKrY=
+=uaUV
 -----END PGP SIGNATURE-----
